force-app/main/default/objects/Acao_historico_OS__c/Acao_historico_OS__c.object-meta.xml
<CustomObject>
    <label>Ação do histórico da OS</label>
    <nameField>
        <label>Nome da Categorização da OS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ações do histórico da OS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>