force-app/main/default/objects/Acao_historico_OS__c/fields/Categoria_contato__c.field-meta.xml
<CustomField>
    <fullName>Categoria_contato__c</fullName>
    <label>Categoria do contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Efetivo</fullName>
            </value>
            <value>
                <fullName>Não efetivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>