force-app/main/default/objects/Acao_historico_OS__c/fields/Codigo_externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_externo__c</fullName>
    <externalId>true</externalId>
    <label>Código externo</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>