force-app/main/default/objects/Acao_historico_OS__c/fields/Data_cadastro__c.field-meta.xml
<CustomField>
    <fullName>Data_cadastro__c</fullName>
    <label>Data de cadastro</label>
    <type>DateTime</type>
</CustomField>