force-app/main/default/objects/Acao_historico_OS__c/fields/Habilita_corretora__c.field-meta.xml
<CustomField>
    <fullName>Habilita_corretora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilita corretora</label>
    <type>Checkbox</type>
</CustomField>