force-app/main/default/objects/Acao_historico_OS__c/fields/Motivo_devolucao__c.field-meta.xml
<CustomField>
    <fullName>Motivo_devolucao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motivo devolução</label>
    <type>Checkbox</type>
</CustomField>