force-app/main/default/objects/Acao_historico_OS__c/fields/Pais_referencia__c.field-meta.xml
<CustomField>
    <fullName>Pais_referencia__c</fullName>
    <description>ISO Alpha-3 do país que será usado o registro</description>
    <label>País de Referência</label>
    <length>3</length>
    <type>Text</type>
</CustomField>