force-app/main/default/objects/Acao_historico_OS__c/fields/Texto_padrao__c.field-meta.xml
<CustomField>
    <fullName>Texto_padrao__c</fullName>
    <label>Texto padrão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>