force-app/main/default/objects/Acao_historico_OS__c/validationRules/Name_somente_leitura.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_somente_leitura</fullName>
    <active>true</active>
    <description>O campo (Ação de OS / Name) padrão recebe dados via integração, portanto não pode ser alterado de forma manual.</description>
    <errorConditionFormula>AND(
ISCHANGED(Name), 
NOT(ISNEW()),
NOT($Profile.Name = &#39;Administrador do sistema&#39;) 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Este campo não pode ser alterado manualmente.</errorMessage>
</ValidationRule>