force-app/main/default/objects/Acao_historico_OS__c/validationRules/Proibir_edicao_acao_inativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Proibir_edicao_acao_inativa</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
  OR(
    ISNEW(),
    Ativo__c
  )
)</errorConditionFormula>
    <errorMessage>Para alterar uma Ação de Histórico de OS, a mesma deve estar ativada!</errorMessage>
</ValidationRule>