force-app/main/default/objects/Acao_historico_OS__c/listViews/Listview_Acao_historico_OS_Ativos.listView-meta.xml
<ListView>
    <fullName>Listview_Acao_historico_OS_Ativos</fullName>
    <columns>NAME</columns>
    <columns>Categoria_contato__c</columns>
    <columns>Ativo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ativo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ativos</label>
</ListView>